--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "mongoose": "^8.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
